syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_03/pkg/entity/pc.proto";

message ListPCReq {}

message ListPCResp {
    repeated entity.PC PCs = 1 [(gogoproto.nullable) = false];
}
